# hyprdo

./: .gitignore  README.md  pyproject.toml
docs/: ERD.md  PRD.md  WIREFRAME.md
src/hyprdo/: __init__.py  cli.py  config.py  daemon.py  database.py  main.py  models.py  theme.py  toggle.py
src/hyprdo/ui/: __init__.py  add_dialog.py  task_row.py  window.py
tests/: test_cli.py  test_database.py
