[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hyprdo"
version = "0.1.0"
description = "A native GTK4 to-do list app for Hyprland — theme-aware, Waybar integrated"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "boemi", email = "" }]
requires-python = ">=3.11"
keywords = ["hyprland", "waybar", "gtk4", "todo", "linux", "wayland"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "typer>=0.12",
    "PyGObject>=3.48",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
]

[project.scripts]
hyprdo     = "hyprdo.cli:main"
hyprdo-gui = "hyprdo.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
